*2.0.0 [Preview Release]* (September 29th, 2007) [Includes duplicates of changes from 1.1.4 - 1.2.3]

* Moved the SourceAnnotationExtractor to a separate file in case libraries try to load the rails rake tasks twice. [Rick]

* Moved Dispatcher to ActionController::Dispatcher.  [Jeremy Kemper]

* Changed the default logger from Ruby's own Logger with the clean_logger extensions to ActiveSupport::BufferedLogger for performance reasons [DHH]. (You can change it back with config.logger = Logger.new("/path/to/log", level).)

* Added a default 422.html page to be rendered when ActiveRecord::RecordInvalid, ActiveRecord::RecordNotSaved, or ActionController::InvalidAuthenticityToken is raised [DHH]

* Added --skip-fixture option to script/generate model #6862 [sandofsky]

* Print Rails version when starting console #7440 [eyematz]

* Fixed the placement of fixture files for nested models when generating through script/generate model #7547 [jkit]

* Added TEMPLATE option to rake doc:app to set a custom output template #7737 [Jakob S]

* Added VERBOSE option to rake db:migrate to turn off output #8204 [jbarnette]

* Fixed that rake doc:app should use UTF-8 #8906 [farzy]

* Fixes rake annotations to search erb and builder files as well #9150 [m.langenberg]

* Removed web_service generator [Koz]

* Added the :all option to config.plugins that'll include the rest of the plugins not already explicitly named #9613 [fcheung]. Example:

    # Loads :classic_pagination before all the other plugins
    config.plugins = [ :classic_pagination, :all ]

* Added symbols as a legal way of specifying plugins in config.plugins #9629 [tom]

* Removed deprecated task names, like clear_logs, in favor of the new namespaced style [DHH]

* Support multiple config.after_initialize blocks so plugins and apps can more easily cooperate.  #9582 [zdennis]

* Added db:drop:all to drop all databases declared in config/database.yml [DHH]
